--- a/src/theme/styles/theme.css
+++ b/src/theme/styles/theme.css
@@ -38,6 +38,10 @@ summary {
 
 .nextra-content {
   @apply nx-text-slate-700 dark:nx-text-slate-200;
+
+  img {
+    @apply nx-mx-auto nx-w-full;
+  }
 }
 
 @media (max-width: 767px) {
